@@ -76,6 +76,10 @@ void DofMapBuilder::build(
   // Check if dofmap is distributed
   const bool distributed = MPI::size(mesh.mpi_comm()) > 1;
 
+  // Build set of dofs that are not associated with a mesh entity
+  // (global dofs)
+  const DofMapBuilder::set global_dofs = compute_global_dofs(dofmap);
+
   // Determine and set dof block size
   dolfin_assert(dofmap._ufc_dofmap);
   const std::size_t block_size = compute_blocksize(*dofmap._ufc_dofmap);
@@ -86,14 +90,14 @@ void DofMapBuilder::build(
   if (distributed)
   {
     reorder_distributed(dofmap, mesh, restriction, restricted_dofs_inverse,
-                        block_size);
+                        block_size, global_dofs);
   }
   else
   {
     // Optionally re-order local dofmap for spatial locality
     const bool reorder = dolfin::parameters["reorder_dofs_serial"];
     if (reorder)
-      reorder_local(dofmap, mesh, block_size);
+      reorder_local(dofmap, mesh, block_size, global_dofs);
 
     // Set local dof ownbership range
     dofmap._ownership_range = std::make_pair(0, dofmap.global_dimension());
@@ -384,7 +388,8 @@ std::size_t DofMapBuilder::build_constrained_vertex_indices(
 }
 //-----------------------------------------------------------------------------
 void DofMapBuilder::reorder_local(DofMap& dofmap, const Mesh& mesh,
-                                  std::size_t block_size)
+                                  std::size_t block_size,
+				  const DofMapBuilder::set& global_dofs)
 {
   // Global dimension
   const std::size_t N = dofmap.global_dimension();
@@ -407,9 +412,17 @@ void DofMapBuilder::reorder_local(DofMap& dofmap, const Mesh& mesh,
 
     std::vector<dolfin::la_index>::const_iterator node0, node1;
     for (std::size_t i = 0; i < nodes_per_cell; ++i)
+    {
+      if (global_dofs.find(dofs0[i])!=global_dofs.end())
+        continue;
       for (std::size_t j = 0; j < nodes_per_cell; ++j)
+      {
+	if (global_dofs.find(dofs1[j])!=global_dofs.end())
+	  continue;
         if (dofs0[i] != dofs1[j])
           graph[dofs0[i] % num_nodes].insert(dofs1[j] % num_nodes);
+      }
+    }
   }
 
   // Reorder block graph
@@ -634,11 +647,9 @@ void DofMapBuilder::reorder_distributed(DofMap& dofmap,
                             const Mesh& mesh,
                             std::shared_ptr<const Restriction> restriction,
                             const map& restricted_dofs_inverse,
-                            std::size_t block_size)
+			    std::size_t block_size,
+			    const DofMapBuilder::set& global_dofs)
 {
-  // Build set of dofs that are not associated with a mesh entity
-  // (global dofs)
-  set global_dofs = compute_global_dofs(dofmap);
 
   // Allocate data structure to hold node ownership (multiple dofs can
   // live at one node)
@@ -655,8 +666,8 @@ void DofMapBuilder::reorder_distributed(DofMap& dofmap,
 
   // Renumber owned dofs and receive new numbering for unowned shared
   // dofs
-  parallel_renumber(node_ownership, shared_node_processes, dofmap, mesh,
-                    restriction, restricted_dofs_inverse, block_size);
+  parallel_renumber(node_ownership, shared_node_processes, dofmap, global_dofs, 
+		    mesh, restriction, restricted_dofs_inverse, block_size);
 }
 //-----------------------------------------------------------------------------
 void DofMapBuilder::compute_node_ownership(boost::array<set, 3>& node_ownership,
@@ -713,6 +724,9 @@ void DofMapBuilder::compute_node_ownership(boost::array<set, 3>& node_ownership,
   {
     for (CellIterator _f(boundary); !_f.end(); ++_f)
     {
+      // Create a vote per facet
+      const std::size_t facet_vote = rng();
+
       // Get boundary facet
       Facet f(mesh, cell_map[*_f]);
 
@@ -750,7 +764,7 @@ void DofMapBuilder::compute_node_ownership(boost::array<set, 3>& node_ownership,
         if (shared_owned_nodes.find(facet_node) == shared_owned_nodes.end())
         {
           shared_owned_nodes.insert(facet_node);
-          node_vote[facet_node] = rng();
+          node_vote[facet_node] = facet_vote;
 
           send_buffer.push_back(facet_node);
           send_buffer.push_back(node_vote[facet_node]);
@@ -808,9 +822,9 @@ void DofMapBuilder::compute_node_ownership(boost::array<set, 3>& node_ownership,
     }
   }
 
-  // Add/remove global dofs to/from relevant sets (process 0 owns
+  // Add/remove global dofs to/from relevant sets (last process owns
   // global dofs)
-  if (process_number == 0)
+  if (process_number == num_prococesses-1)
   {
     shared_owned_nodes.insert(global_dofs.begin(), global_dofs.end());
     for (set::const_iterator dof = global_dofs.begin();
@@ -882,6 +896,7 @@ void DofMapBuilder::parallel_renumber(
   const boost::array<set, 3>& node_ownership,
   const vec_map& shared_node_processes,
   DofMap& dofmap,
+  const DofMapBuilder::set& global_dofs,
   const Mesh& mesh,
   std::shared_ptr<const Restriction> restriction,
   const map& restricted_nodes_inverse,
@@ -950,6 +965,9 @@ void DofMapBuilder::parallel_renumber(
       std::vector<dolfin::la_index>::const_iterator dof0, dof1;
       for (std::size_t i = 0; i < nodes_per_cell; ++i)
       {
+	if (global_dofs.find(dofs0[i])!=global_dofs.end())
+	  continue;
+
         const std::size_t n0_old = dofs0[i] % num_nodes;
 
         // Get new node index from contiguous map
@@ -961,6 +979,9 @@ void DofMapBuilder::parallel_renumber(
           dolfin_assert(n0_local < graph.size());
           for (std::size_t j = 0; j < nodes_per_cell; ++j)
           {
+	    if (global_dofs.find(dofs0[j])!=global_dofs.end())
+	      continue;
+
             const std::size_t n1_old = dofs1[j] % num_nodes;
             boost::unordered_map<std::size_t, std::size_t>::const_iterator
               n1 = my_old_to_new_node_index.find(n1_old);
@@ -1191,6 +1212,7 @@ void DofMapBuilder::compute_global_dofs(DofMapBuilder::set& global_dofs,
       // Insert global dof index
       std::pair<DofMapBuilder::set::iterator, bool> ret
         = global_dofs.insert(dof + offset);
+      
       if (!ret.second)
       {
         dolfin_error("DofMapBuilder.cpp",
